# order_service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  db.py  docker-compose-test.yml  docker-compose.yml  logger_config.py  mypy.ini  pyproject.toml  pytest.ini  wait-for-it.sh
alembic/: env.py
alembic/versions/: e008bc4bcf82_create_tables.py
models/: order.py
order_service/: __main__.py  app.py  errors.py
order_service/endpoints/: items.py  orders.py
order_service/schemas/: items.py  orders.py
order_service/services/: base.py  item.py  order.py
tests/: conftest.py
tests/endpoints/: test_items.py  test_orders.py
